refactor(frontend/controller): limpieza controladores perfil, ajustes, seguridad, proyectos y tareas